--- a/index.html
+++ b/index.html
@@ -7,6 +7,35 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="container">
+        <h1>Global World Clock</h1>
+
+        <select>
+            <option value="">Select a city...</option>
+            <option value="Tokyo">Tokyo</option>
+            <option value="Paris">Paris</option>
+            <option value="Rio de Janeiro">Rio de Janeiro</option>
+        </select>
+
+        <div class="city">
+            <h2>Tokyo 🇯🇵</h2>
+            <div class="date">October 20th 2024</div>
+            <div class="time">10:15:30 PM</div>
+        </div>
+
+        <div class="city">
+            <h2>Paris 🇫🇷</h2>
+            <div class="date">October 20th 2024</div>
+            <div class="time">03:15:30 PM</div>
+        </div>
+
+        <div class="city">
+            <h2>Rio de Janeiro 🇧🇷</h2>
+            <div class="date">October 20th 2024</div>
+            <div class="time">11:15:30 AM</div>
+        </div>
+
+    </div>
     <footer>
       This project was coded with <a href="">VSCode</a> by Remo Mopedi and is
       <a href="https://github.com/RemoMopedi/Worldclock.git"
