--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
       <a href="https://github.com/RemoMopedi/Worldclock.git"
         >open sourced on GitHub</a
       >
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.37/moment-timezone-with-data-1970-2030.min.js"></script>
       <script src="worldclock.js"></script>
     </footer>
   </body>
