--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     </div>
     <footer>
-      This project was coded with <a href="">VSCode</a> by Remo Mopedi and is
+      This project was coded with <a href="https://code.visualstudio.com">VSCode</a> by Remo Mopedi and is
       <a href="https://github.com/RemoMopedi/Worldclock.git"
         >open sourced on GitHub</a
       >
