--- a/index.html
+++ b/index.html
@@ -17,25 +17,24 @@
             <option value="Rio de Janeiro">Rio de Janeiro</option>
         </select>
 
-        <div class="city">
-            <h2>Tokyo 🇯🇵</h2>
-            <div class="date">October 20th 2024</div>
-            <div class="time">10:15:30 PM</div>
-        </div>
+        <div class="city" id="tokyo">
+  <h2>Tokyo 🇯🇵</h2>
+  <div class="date">October 20th 2024</div>
+  <div class="time">10:15:30 PM</div>
+</div>
 
-        <div class="city">
-            <h2>Paris 🇫🇷</h2>
-            <div class="date">October 20th 2024</div>
-            <div class="time">03:15:30 PM</div>
-        </div>
+<div class="city" id="paris">
+  <h2>Paris 🇫🇷</h2>
+  <div class="date">October 20th 2024</div>
+  <div class="time">03:15:30 PM</div>
+</div>
 
-        <div class="city">
-            <h2>Rio de Janeiro 🇧🇷</h2>
-            <div class="date">October 20th 2024</div>
-            <div class="time">11:15:30 AM</div>
-        </div>
+<div class="city" id="rio-de-janeiro">
+  <h2>Rio de Janeiro 🇧🇷</h2>
+  <div class="date">October 20th 2024</div>
+  <div class="time">11:15:30 AM</div>
+</div>
 
-    </div>
     <footer>
       This project was coded with <a href="https://code.visualstudio.com">VSCode</a> by Remo Mopedi and is
       <a href="https://github.com/RemoMopedi/Worldclock.git"
