--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <div class="container">
         <h1>Global World Clock</h1>
 
-        <select>
-            <option value="">Select a city...</option>
-            <option value="Tokyo">Tokyo</option>
-            <option value="Paris">Paris</option>
-            <option value="Rio de Janeiro">Rio de Janeiro</option>
-        </select>
+        <select id="city">
+    <option value="">Select a city...</option>
+    <option value="Asia/Tokyo">Tokyo</option>
+    <option value="Europe/Paris">Paris</option>
+    <option value="America/Sao_Paulo">Rio de Janeiro</option>
+</select>
+
 
         <div class="city" id="tokyo">
   <h2>Tokyo 🇯🇵</h2>
