--- a/index.html
+++ b/index.html
@@ -16,25 +16,26 @@
     <option value="Europe/Paris">Paris</option>
     <option value="America/Sao_Paulo">Rio de Janeiro</option>
 </select>
-
+    </div>
 
         <div class="city" id="tokyo">
-  <h2>Tokyo 🇯🇵</h2>
-  <div class="date">October 20th 2024</div>
-  <div class="time">10:15:30 PM</div>
+    <h2>Tokyo 🇯🇵</h2>
+    <div class="date">October 20th 2024</div>
+    <div class="time">10:15:30 PM</div>
 </div>
 
 <div class="city" id="paris">
-  <h2>Paris 🇫🇷</h2>
-  <div class="date">October 20th 2024</div>
-  <div class="time">03:15:30 PM</div>
+    <h2>Paris 🇫🇷</h2>
+    <div class="date">October 20th 2024</div>
+    <div class="time">03:15:30 PM</div>
 </div>
 
-<div class="city" id="rio-de-janeiro">
-  <h2>Rio de Janeiro 🇧🇷</h2>
-  <div class="date">October 20th 2024</div>
-  <div class="time">11:15:30 AM</div>
+<div class="city" id="rio">
+    <h2>Rio de Janeiro 🇧🇷</h2>
+    <div class="date">October 20th 2024</div>
+    <div class="time">11:15:30 AM</div>
 </div>
+
 
     <footer>
       This project was coded with <a href="https://code.visualstudio.com">VSCode</a> by Remo Mopedi and is
